--- a/styles/perfil.css
+++ b/styles/perfil.css
@@ -32,12 +32,17 @@ aside.menu div.container-avatar {
     margin: 4px 0;
 }
 
-aside.menu div.container-avatar #avatar {
-    font-size: 100px;
-    min-width: 220px;
-    margin: 10px 0;
+aside.menu div.container-avatar div.avatar {
+    width: 110px;
+    height: 110px;
+    margin: 0 auto;
 }
-
+aside.menu div.container-avatar div.avatar img{
+    border: .4px solid #666;
+    border-radius: 50%;
+    height: 100%;
+    width: 100%;
+}
 aside.menu ul li a {
     display: block;
     padding: 20px 10px;
@@ -64,11 +69,11 @@ hr {
 
 /*<<<<<<<<<<<<<<<<<'BANNER'>>>>>>>>>>>>>>>>>*/
 
-figure {
+figure.banner {
     grid-area: banner;
 }
 
-figure img {
+figure.banner img {
     object-fit: unset;
     width: 100%;
     min-height: 220px;
