--- a/styles/sign-up.css
+++ b/styles/sign-up.css
@@ -14,7 +14,7 @@ body{
     background-size: 350px;
 }
 main {
-    height: 100%;
+    height: initial;
     width: 100%;
     display: flex;
     justify-content: center;
@@ -23,7 +23,9 @@ main {
 a {
     color: #e47911;
 }
-
+.error{
+    color: #e47911;
+}
 div.logo {
     width: 120px;
     margin: 0 auto;
